first version of own content

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Astral by HTML5 UP</title>
+		<title>Ann-Kathrin Schalkamp</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,108 +19,125 @@
 
 				<!-- Nav -->
 					<nav id="nav">
-						<a href="#" class="icon solid fa-home"><span>Home</span></a>
-						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
-						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
-						<a href="https://twitter.com/ajlkn" class="icon brands fa-twitter"><span>Twitter</span></a>
+						<a href="#me" class="icon fa-home active"><span>Home</span></a>
+						<a href="#about" class="icon fa-user"><span>About</span></a>
+						<a href="#academics" class="icon fa-university"><span>Academics</span></a>
+						<a href="#research" class="icon fa-folder"><span>Research</span></a>
+						<a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
 					</nav>
 
 				<!-- Main -->
 					<div id="main">
 
 						<!-- Me -->
-							<article id="home" class="panel intro">
+							<article id="me" class="panel intro">
 								<header>
-									<h1>Jane Doe</h1>
-									<p>Senior Astral Projectionist</p>
+									<h1>Ann-Kathrin Schalkamp</h1>
+									<p>M. Sc. Candidate in Cognitive Science</p>
 								</header>
-								<a href="#work" class="jumplink pic">
-									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
+								<a href="#about" class="jumplink pic">
+									<!--<span class="arrow icon fa-chevron-right"><span>See my work</span></span>-->
 									<img src="images/me.jpg" alt="" />
 								</a>
 							</article>
 
-						<!-- Work -->
-							<article id="work" class="panel">
+						<!-- About -->
+							<article id="about" class="panel">
 								<header>
-									<h2>Work</h2>
+									<h2>About</h2>
 								</header>
 								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
+									I am currently pursuing my Master's Degree in Cognitive Science at the Univeristy of Tuebingen.
+									My research interest lies in the intersection of Machine Learning, Health, and Neuroscience. 
+									Body movement has fascinated me since I started dancing. Learning about the brain controlling motor actions has led to a general curiosity about the nervous system, its function, and pathological aberrations. 
+									Clinical practice and research in psychiatry and neuroscience are currently advancing into a data-driven and objective approach by means of advanced methodology. 
+									My goal is to contribute to this advance through research in computational neuroscience/medicine. 
+									<br><br>
+									<a href="documents/CV.pdf">Curriculum Vitae</a> (Updated May 2020)<br><br>
 								</p>
-								<section>
-									<div class="row">
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic09.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic10.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic11.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
-										</div>
-									</div>
-								</section>
+								<p>
+									<h3 align="center">Why computational neuroscience/medicine?</h3>
+									Currently, diagnosis and treatment selection especially in psychiatry rely, on self-report and subjective decisions made by physicians. 
+								        Augmenting their decision process by means of Machine Learning tools could largely fasten and objectify this process. 
+									Visualizing medical data in a human comprehensible way or providing propositions and related uncertainties are possible augmentations. 
+									An automatic, data-driven assessment of a patient’s health status can considerably alleviate the workload of physicians, enable early disease detection and extract meaningful insights from the abundance of the medical data available.
+								</p>
+								<p>
+									<h3 align="center">Oustide of Academia</h3>
+									<p style="float: left;"><img src="images/ballet.png" height="450px" width="375px" alt=""></p>
+									I have been dancing ballet since the age of 8. What started as a fun freetime activity has become a huge part of my life.
+									Nearly every moment I can spare, I like to spend with dancing in some way. Be it through taking dance classes, watching videos
+									on youtube, or reading about the anatomy of dance.
+									Memorizing choreographies, improving my technique, and really exhausting myself are things I enjoy in ballet classes.
+								</p>
+
 							</article>
 
+						<!-- Academics -->
+							<article id="academics" class="panel">
+								<header>
+									<h2>Educational Background</h2>
+								</header>
+								<p>
+									<b>M. Sc. in Cognitive Science (focusing on Machine Learning, Computational Psychiatry/Neuroscience)</b> <br>
+									I'm currently pursuing my Master's degree in Cognitive Science at the University of Tuebingen. 
+									I focussed on improving my methodological skills through courses about ML, Statistics and Data Literacy.
+									Seminars on Computational Psychiatry and trends in deep learning for medicine have influenced my research interests the most.
+								</p>
+								<p>
+									<b>B. Sc. in Cognitive Science</b> <br>
+									Throughout my Bachelor at the University of Osnabrück I was able to explore the various fields of Cognitive Science.
+									I gained solid knowledge and skills in a broad range of fields including Neuroinformatics, Mathematics, Computer Science, Neuropsychology, and Neurobiology.
+								</p>
+							</article>
+						<!-- Research-->
+							<article id="research" class="panel">
+								<header>
+									<h2 align="center">Research Projects</h2>
+								</header>
+								<div>
+									<p>
+										<h3 align="center">Neuronal Intelligence Lab</h3><br>
+										I am currently writing my Master's Thesis at the Neuronal Intelligence lab led by Fabian Sinz.
+										My main thesis objective is to model the trajectories of cognitive and motor aging in healthy elderly.
+										By understanding the influence of risk factors from various domains (genetics, lifestyle, neuropathology, metabolism) 
+										on the trajectories, an earlier diagnosis and a targeted treatment of pathological aging (Alzheimer’s or Parkinson’s disease) could be achieved.
+										In neurodegenerative diseases, the neurophysiological changes precede the clinical symptoms by several years, thus an early diagnosis and treatment is of high importance.
+										Longitudinal data of healthy elderly with and without prodromal markers including genetic, metabolic, lifestyle, biomarker and medical health record data will be analyzed 
+										using baseline models like linear mixed effect models and advanced Bayesian modeling.<br><br>
+										<a href="https://sinzlab.org/">Lab Website</a>
+									</p>
+								</div>
+																<div>
+									<p>
+										<h3 align="center">Neuroscience of Motivation, Action, and Desire Laboratory</h3><br>
+										During my laboratory internship at NeuroMADLAB, I analyzed the reliability of functional connectivity biomarkers for Major Depressive Disorder in a multi-site dataset.
+										In this mega-analysis I investigate the functional connectivity aberrations within and between large-scale brain networks in MDD using group-level models and supervised learning.
+										Working with fMRI data and a dataset from multiple sources, I gained insights in the research practices and put my theoretical knowledge to practice.<br><br>
+										<a href="https://neuromadlab.com/de/">Lab Website</a>
+									</p>
+								</div>
+								</div>
+																<div>
+									<p>
+										<h3 align="center">Bachelor's Thesis</h3><br>
+										In my Bachelor's Thesis I was able to I gain hands-on experience about the power of those tools in the field of EEG-based Brain-Computer-Interfaces.
+										I investigated whether EEG data acquired with the Traumschreiber, a portable hightech sleep mask, is usable for traditional and single-trial analysis needed for Brain Computer Interfaces.
+									</p>
+								</div>
+							</article>
 						<!-- Contact -->
 							<article id="contact" class="panel">
 								<header>
-									<h2>Contact Me</h2>
+									<h2 align="center">Contact Me</h2>
 								</header>
-								<form action="#" method="post">
-									<div>
-										<div class="row">
-											<div class="col-6 col-12-medium">
-												<input type="text" name="name" placeholder="Name" />
-											</div>
-											<div class="col-6 col-12-medium">
-												<input type="text" name="email" placeholder="Email" />
-											</div>
-											<div class="col-12">
-												<input type="text" name="subject" placeholder="Subject" />
-											</div>
-											<div class="col-12">
-												<textarea name="message" placeholder="Message" rows="6"></textarea>
-											</div>
-											<div class="col-12">
-												<input type="submit" value="Send Message" />
-											</div>
-										</div>
-									</div>
-								</form>
+								<p align="center">
+									<span class="icon fa-paper-plane"></span> <a href="mailto:ann-kathrin.schalkamp@student.uni-tuebingen.com">ann-kathrin.schalkamp@student.uni-tuebingen.com</a> |
+									<span class="icon fa-github"></span> <a href="https://github.com/aschalkamp">aschalkamp</a> |
+									<span class="icon fa-linkedin-square"></span> <a href="https://www.linkedin.com/in/ann-kathrin-schalkamp-3501b21a7/">Ann-Kathrin Schalkamp</a> <br>
+									<span class="icon fa-twitter-square"></span> <a href="https://twitter.com/ASchalkamp">@ASchalkamp</a> |
+								</p>
 							</article>
-
-					</div>
 
 				<!-- Footer -->
 					<div id="footer">
