--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 								</p>
 								<p>
 									<h3 align="center">Oustide of Academia</h3>
-									<p style="float: left;"><img src="images/ballet.png" height="450px" width="375px" alt=""></p>
+									<p style="float: left;"><img src="images/ballet.png" height="450px" width="375px" alt=""> <br/>by Knut Reimann</p>
 									I have been dancing ballet since the age of 8. What started as a fun freetime activity has become a huge part of my life.
 									Nearly every moment I can spare, I like to spend with dancing in some way. Be it through taking dance classes, watching videos
 									on youtube, or reading about the anatomy of dance.
@@ -115,8 +115,7 @@
 										In this mega-analysis I investigate the functional connectivity aberrations within and between large-scale brain networks in MDD using group-level models and supervised learning.
 										Working with fMRI data and a dataset from multiple sources, I gained insights in the research practices and put my theoretical knowledge to practice.<br><br>
 										<a href="https://neuromadlab.com/de/">Lab Website</a>
-									</p>
-								</div>
+																	</p>
 								</div>
 																<div>
 									<p>
@@ -142,7 +141,7 @@
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="copyright">
-							<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; ASchalkamp</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</div>
 
