--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 	</head>
 	<body class="is-preload">
 
@@ -19,7 +20,7 @@
 
 				<!-- Nav -->
 					<nav id="nav">
-						<a href="#me" class="icon fa-home active"><span>Home</span></a>
+						<a href="#me" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#about" class="icon fa-user"><span>About</span></a>
 						<a href="#academics" class="icon fa-university"><span>Academics</span></a>
 						<a href="#research" class="icon fa-folder"><span>Research</span></a>
@@ -64,9 +65,9 @@
 								</p>
 								<p>
 									<h3 align="center">Oustide of Academia</h3>
-									<p style="float: left;"><img src="images/ballet.png" height="450px" width="375px" alt=""> <br/>by Knut Reimann</p>
+									<p style="float: left;"><img src="images/ballet.jpg" height="450px" width="375px" alt=""> <br/><font size="-1">photo by Knut Reimann</font></p>
 									I have been dancing ballet since the age of 8. What started as a fun freetime activity has become a huge part of my life.
-									Nearly every moment I can spare, I like to spend with dancing in some way. Be it through taking dance classes, watching videos
+									Most of my freetime, I like to spend with dancing in some way. Be it through taking dance classes, watching videos
 									on youtube, or reading about the anatomy of dance.
 									Memorizing choreographies, improving my technique, and really exhausting myself are things I enjoy in ballet classes.
 								</p>
@@ -108,20 +109,22 @@
 										<a href="https://sinzlab.org/">Lab Website</a>
 									</p>
 								</div>
-																<div>
+								<div>
 									<p>
 										<h3 align="center">Neuroscience of Motivation, Action, and Desire Laboratory</h3><br>
 										During my laboratory internship at NeuroMADLAB, I analyzed the reliability of functional connectivity biomarkers for Major Depressive Disorder in a multi-site dataset.
 										In this mega-analysis I investigate the functional connectivity aberrations within and between large-scale brain networks in MDD using group-level models and supervised learning.
 										Working with fMRI data and a dataset from multiple sources, I gained insights in the research practices and put my theoretical knowledge to practice.<br><br>
 										<a href="https://neuromadlab.com/de/">Lab Website</a>
-																	</p>
+									</p>
 								</div>
-																<div>
+								<div>
 									<p>
 										<h3 align="center">Bachelor's Thesis</h3><br>
 										In my Bachelor's Thesis I was able to I gain hands-on experience about the power of those tools in the field of EEG-based Brain-Computer-Interfaces.
 										I investigated whether EEG data acquired with the Traumschreiber, a portable hightech sleep mask, is usable for traditional and single-trial analysis needed for Brain Computer Interfaces.
+										<br><br>
+										<a href="documents/shortBSc.pdf">Short Summary of Bachelor's Thesis</a><br><br>
 									</p>
 								</div>
 							</article>
