--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 	</head>
 	<body class="is-preload">
 
@@ -22,7 +21,7 @@
 					<nav id="nav">
 						<a href="#me" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#about" class="icon fa-user"><span>About</span></a>
-						<a href="#academics" class="icon fa-university"><span>Academics</span></a>
+						<a href="#academics" class="icon fa-folder"><span>Academics</span></a>
 						<a href="#research" class="icon fa-folder"><span>Research</span></a>
 						<a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
 					</nav>
@@ -81,7 +80,7 @@
 								</header>
 								<p>
 									<b>M. Sc. in Cognitive Science (focusing on Machine Learning, Computational Psychiatry/Neuroscience)</b> <br>
-									I'm currently pursuing my Master's degree in Cognitive Science at the University of Tuebingen. 
+									I am currently pursuing my Master's degree in Cognitive Science at the University of Tuebingen. 
 									I focussed on improving my methodological skills through courses about ML, Statistics and Data Literacy.
 									Seminars on Computational Psychiatry and trends in deep learning for medicine have influenced my research interests the most.
 								</p>
@@ -135,9 +134,9 @@
 								</header>
 								<p align="center">
 									<span class="icon fa-paper-plane"></span> <a href="mailto:ann-kathrin.schalkamp@student.uni-tuebingen.com">ann-kathrin.schalkamp@student.uni-tuebingen.com</a> |
-									<span class="icon fa-github"></span> <a href="https://github.com/aschalkamp">aschalkamp</a> |
-									<span class="icon fa-linkedin-square"></span> <a href="https://www.linkedin.com/in/ann-kathrin-schalkamp-3501b21a7/">Ann-Kathrin Schalkamp</a> <br>
-									<span class="icon fa-twitter-square"></span> <a href="https://twitter.com/ASchalkamp">@ASchalkamp</a> |
+									<span class="icon brands fa-github"></span> <a href="https://github.com/aschalkamp">aschalkamp</a> |
+									<span class="icon brands fa-linkedin-square"></span> <a href="https://www.linkedin.com/in/ann-kathrin-schalkamp-3501b21a7/">Ann-Kathrin Schalkamp</a> <br>
+									<span class="icon brands fa-twitter"></span> <a href="https://twitter.com/ASchalkamp">@ASchalkamp</a> |
 								</p>
 							</article>
 
