added background credits and fixed some phrasing

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<nav id="nav">
 						<a href="#me" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#about" class="icon fa-user"><span>About</span></a>
-						<a href="#academics" class="icon fa-folder"><span>Academics</span></a>
+						<a href="#academics" class="icon solid fa-university"><span>Academics</span></a>
 						<a href="#research" class="icon fa-folder"><span>Research</span></a>
 						<a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
 					</nav>
@@ -44,10 +44,9 @@
 						<!-- About -->
 							<article id="about" class="panel">
 								<header>
-									<h2>About</h2>
+									<h2>About Myself</h2>
 								</header>
 								<p>
-									I am currently pursuing my Master's Degree in Cognitive Science at the Univeristy of Tuebingen.
 									My research interest lies in the intersection of Machine Learning, Health, and Neuroscience. 
 									Body movement has fascinated me since I started dancing. Learning about the brain controlling motor actions has led to a general curiosity about the nervous system, its function, and pathological aberrations. 
 									Clinical practice and research in psychiatry and neuroscience are currently advancing into a data-driven and objective approach by means of advanced methodology. 
@@ -57,8 +56,8 @@
 								</p>
 								<p>
 									<h3 align="center">Why computational neuroscience/medicine?</h3>
-									Currently, diagnosis and treatment selection especially in psychiatry rely, on self-report and subjective decisions made by physicians. 
-								        Augmenting their decision process by means of Machine Learning tools could largely fasten and objectify this process. 
+									Currently, diagnosis and treatment selection especially in psychiatry rely on self-report and subjective decisions made by physicians. 
+								        Augmenting their decision process by means of Machine Learning could largely fasten and objectify this process. 
 									Visualizing medical data in a human comprehensible way or providing propositions and related uncertainties are possible augmentations. 
 									An automatic, data-driven assessment of a patient’s health status can considerably alleviate the workload of physicians, enable early disease detection and extract meaningful insights from the abundance of the medical data available.
 								</p>
@@ -66,9 +65,9 @@
 									<h3 align="center">Oustide of Academia</h3>
 									<p style="float: left;"><img src="images/ballet.jpg" height="370px" width="300px" alt=""> <br/><font size="-1">photo by Knut Reimann</font></p>
 									I have been dancing ballet since the age of 8. What started as a fun freetime activity has become a huge part of my life.
-									Most of my freetime, I like to spend with dancing in some way. Be it through taking dance classes, watching videos
+									Most of my freetime I like to spend with dancing in some way. Be it through taking dance classes, watching videos
 									on youtube, or reading about the anatomy of dance.
-									Memorizing choreographies, improving my technique, and really exhausting myself are things I enjoy in ballet classes.
+									Memorizing choreographies, improving my technique, and really exhausting myself are things I enjoy about ballet classes.
 								</p>
 
 							</article>
@@ -81,13 +80,13 @@
 								<p>
 									<b>M. Sc. in Cognitive Science (focusing on Machine Learning, Computational Psychiatry/Neuroscience)</b> <br>
 									I am currently pursuing my Master's degree in Cognitive Science at the University of Tuebingen. 
-									I focussed on improving my methodological skills through courses about ML, Statistics and Data Literacy.
-									Seminars on Computational Psychiatry and trends in deep learning for medicine have influenced my research interests the most.
+									My goal is to improve my methodological skills through courses about ML, Statistics, and Data Literacy.
+									Seminars on Computational Psychiatry and deep learning for medicine have influenced my research interests the most.
 								</p>
 								<p>
 									<b>B. Sc. in Cognitive Science</b> <br>
-									Throughout my Bachelor at the University of Osnabrück I was able to explore the various fields of Cognitive Science.
-									I gained solid knowledge and skills in a broad range of fields including Neuroinformatics, Mathematics, Computer Science, Neuropsychology, and Neurobiology.
+									Throughout my studies at the University of Osnabrück I was introduced to the different fields in Cognitive Science.
+									I gained solid knowledge and skills in a broad range of fields with a special focus on Neuroinformatics, Mathematics, Computer Science, Neuropsychology, and Neurobiology.
 								</p>
 							</article>
 						<!-- Research-->
@@ -98,7 +97,7 @@
 								<div>
 									<p>
 										<h3 align="center">Neuronal Intelligence Lab</h3><br>
-										I am currently writing my Master's Thesis at the Neuronal Intelligence lab led by Fabian Sinz.
+										I am currently writing my Master's Thesis at the Neuronal Intelligence lab under the supervision by Fabian Sinz.
 										My main thesis objective is to model the trajectories of cognitive and motor aging in healthy elderly.
 										By understanding the influence of risk factors from various domains (genetics, lifestyle, neuropathology, metabolism) 
 										on the trajectories, an earlier diagnosis and a targeted treatment of pathological aging (Alzheimer’s or Parkinson’s disease) could be achieved.
@@ -113,17 +112,17 @@
 										<h3 align="center">Neuroscience of Motivation, Action, and Desire Laboratory</h3><br>
 										During my laboratory internship at NeuroMADLAB, I analyzed the reliability of functional connectivity biomarkers for Major Depressive Disorder in a multi-site dataset.
 										In this mega-analysis I investigate the functional connectivity aberrations within and between large-scale brain networks in MDD using group-level models and supervised learning.
-										Working with fMRI data and a dataset from multiple sources, I gained insights in the research practices and put my theoretical knowledge to practice.<br><br>
+										Working with fMRI data and a dataset from multiple sources, I gained insights in research practices and put my theoretical knowledge to practice.<br><br>
 										<a href="https://neuromadlab.com/de/">Lab Website</a>
 									</p>
 								</div>
 								<div>
 									<p>
 										<h3 align="center">Bachelor's Thesis</h3><br>
-										In my Bachelor's Thesis I was able to I gain hands-on experience about the power of those tools in the field of EEG-based Brain-Computer-Interfaces.
-										I investigated whether EEG data acquired with the Traumschreiber, a portable hightech sleep mask, is usable for traditional and single-trial analysis needed for Brain Computer Interfaces.
+										Through my Bachelor's Thesis I was able to I gain hands-on experience about the power of Machine Learning tools in the field of EEG-based Brain-Computer-Interfaces.
+										I investigated whether EEG data acquired with the Traumschreiber, a portable hightech sleep mask, is appropriate for traditional and single-trial analysis needed for BCIs.
 										<br><br>
-										<a href="documents/shortBSc.pdf">Short Summary of Bachelor's Thesis</a><br><br>
+										<a href="documents/shortBSc.pdf">Short Summary of my Bachelor's Thesis</a><br><br>
 									</p>
 								</div>
 							</article>
@@ -135,19 +134,19 @@
 								<p align="center">
 									<span class="icon fa-paper-plane"></span> <a href="mailto:ann-kathrin.schalkamp@student.uni-tuebingen.com">ann-kathrin.schalkamp@student.uni-tuebingen.com</a> |
 									<span class="icon brands fa-github"></span> <a href="https://github.com/aschalkamp">aschalkamp</a> |
-									<span class="icon brands fa-linkedin-square"></span> <a href="https://www.linkedin.com/in/ann-kathrin-schalkamp-3501b21a7/">Ann-Kathrin Schalkamp</a> <br>
+									<span class="icon brands fa-linkedin"></span> <a href="https://www.linkedin.com/in/ann-kathrin-schalkamp-3501b21a7/">ann-Kathrin-schalkamp</a> <br>
 									<span class="icon brands fa-twitter"></span> <a href="https://twitter.com/ASchalkamp">@ASchalkamp</a> |
 								</p>
 							</article>
-
+				</div>
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="copyright">
-							<li>&copy; ASchalkamp</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; ASchalkamp</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Background: <a href="http://www.freepik.com">Designed by rawpixel.com / Freepik</a></li>
 						</ul>
 					</div>
 
-			</div>
+	</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
