--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
 								</header>
 								<p align="center">
 									<span class="icon fa-paper-plane"></span> <a href="mailto:ann-kathrin.schalkamp@student.uni-tuebingen.com">ann-kathrin.schalkamp@student.uni-tuebingen.com</a> |
-									<span class="icon brands fa-github"></span> <a href="https://github.com/aschalkamp">aschalkamp</a> |
-									<span class="icon brands fa-linkedin"></span> <a href="https://www.linkedin.com/in/ann-kathrin-schalkamp-3501b21a7/">ann-Kathrin-schalkamp</a> <br>
+									<span class="icon brands fa-github"></span> <a href="https://github.com/aschalkamp">aschalkamp</a> | <br>
+									<span class="icon brands fa-linkedin"></span> <a href="https://www.linkedin.com/in/ann-kathrin-schalkamp-3501b21a7/">ann-Kathrin-schalkamp</a>
 									<span class="icon brands fa-twitter"></span> <a href="https://twitter.com/ASchalkamp">@ASchalkamp</a> |
 								</p>
 							</article>
