adjust image size and placing

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 								</p>
 								<p>
 									<h3 align="center">Oustide of Academia</h3>
-									<p style="float: left;"><img src="images/ballet.jpg" height="370px" width="300px" alt=""> <br/><font size="-1">photo by Knut Reimann</font></p>
+									<p style="float: left; padding-right: 50px"><img src="images/ballet.jpg" height="400px" width="200px" alt=""> <br/><font size="-1">photo by Knut Reimann</font></p>
 									I have been dancing ballet since the age of 8. What started as a fun freetime activity has become a huge part of my life.
 									Most of my freetime I like to spend with dancing in some way. Be it through taking dance classes, watching videos
 									on youtube, or reading about the anatomy of dance.
