--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 									An automatic, data-driven assessment of a patient’s health status can considerably alleviate the workload of physicians, enable early disease detection and extract meaningful insights from the abundance of the medical data available.
 								</p>
 								<p>
-									<h3 align="center">Oustide of Academia</h3>
-									<p style="float: left; padding-right: 50px"><img src="images/ballet.jpg" height="400px" width="200px" alt=""> <br/><font size="-1">photo by Knut Reimann</font></p>
+									<h3 align="center">Outside of Academia</h3>
+									<p style="float: left; padding-right: 50px"><img src="images/ballet.jpg" height="250px" width="200px" alt=""> <br><font size="-1">photo by Knut Reimann</font></p>
 									I have been dancing ballet since the age of 8. What started as a fun freetime activity has become a huge part of my life.
 									Most of my freetime I like to spend with dancing in some way. Be it through taking dance classes, watching videos
 									on youtube, or reading about the anatomy of dance.
@@ -97,7 +97,7 @@
 								<div>
 									<p>
 										<h3 align="center">Neuronal Intelligence Lab</h3><br>
-										I am currently writing my Master's Thesis at the Neuronal Intelligence lab under the supervision by Fabian Sinz.
+										I am currently writing my Master's Thesis at the Neuronal Intelligence lab under the supervision of Fabian Sinz.
 										My main thesis objective is to model the trajectories of cognitive and motor aging in healthy elderly.
 										By understanding the influence of risk factors from various domains (genetics, lifestyle, neuropathology, metabolism) 
 										on the trajectories, an earlier diagnosis and a targeted treatment of pathological aging (Alzheimer’s or Parkinson’s disease) could be achieved.
@@ -132,17 +132,17 @@
 									<h2 align="center">Contact Me</h2>
 								</header>
 								<p align="center">
-									<span class="icon fa-paper-plane"></span> <a href="mailto:ann-kathrin.schalkamp@student.uni-tuebingen.com">ann-kathrin.schalkamp@student.uni-tuebingen.com</a> |
-									<span class="icon brands fa-github"></span> <a href="https://github.com/aschalkamp">aschalkamp</a> | <br>
-									<span class="icon brands fa-linkedin"></span> <a href="https://www.linkedin.com/in/ann-kathrin-schalkamp-3501b21a7/">ann-Kathrin-schalkamp</a>
-									<span class="icon brands fa-twitter"></span> <a href="https://twitter.com/ASchalkamp">@ASchalkamp</a> |
+									<span class="icon fa-paper-plane"></span> <a href="mailto:ann-kathrin.schalkamp@student.uni-tuebingen.com">ann-kathrin.schalkamp@student.uni-tuebingen.com</a>
+									<span class="icon brands fa-github"></span> <a href="https://github.com/aschalkamp">aschalkamp</a> <br>
+									<span class="icon brands fa-linkedin"></span> <a href="https://www.linkedin.com/in/ann-kathrin-schalkamp-3501b21a7/">Ann-Kathrin Schalkamp</a>
+									<span class="icon brands fa-twitter"></span> <a href="https://twitter.com/ASchalkamp">@ASchalkamp</a>
 								</p>
 							</article>
 				</div>
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="copyright">
-							<li>&copy; ASchalkamp</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Background: <a href="http://www.freepik.com">Designed by rawpixel.com / Freepik</a></li>
+							<li>&copy; ASchalkamp</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</div>
 
